--- a/index.html
+++ b/index.html
@@ -54,8 +54,14 @@
         </div>
         <button type="submit">Cadastrar</button>
       </form>
-
     </section>
   </main>
+
+  <script
+  src="https://code.jquery.com/jquery-3.7.1.slim.min.js"
+  integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8="
+  crossorigin="anonymous"></script>
+  <script src="./src/scripts/jquery.mask.min.js"></script>
+  <script src="./src/scripts/main.js"></script>
 </body>
 </html>
